--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,13 @@
   "dependencies": {
     "@hapi/joi": "^15.1.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.7"
+    "mongoose": "^5.6.7",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
