--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "npm start --prefix client",
+    "format": "prettier \"src/**/*.{js,html}\" --write"
   },
   "repository": {
     "type": "git",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
+    "http-proxy-middleware": "^0.19.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2"
   }
